@@ -41,13 +41,12 @@ class trans
 	/**
 	 * Construct
 	 *
-	 * @version 16th April 2016
+	 * @version 22nd June 2016
 	 * @since	16th April 2016
 	 * @return	void
 	 */
 	public function __construct()
 	{
-		$this->pdo = new sqlConnection();
 		$this->session = new session();
 	}
 
@@ -55,12 +54,13 @@ class trans
 	 * Get and store custom string replacements in session
 	 *
 	 * (Moved from Functions)
-	 * @version 19th April 2016
+	 * @version 22nd June 2016
 	 * @since	Old
 	 * @return	void
 	 */
 	public function setStringReplacementList()
 	{
+		$this->pdo = new sqlConnection();
 		$this->session->set('stringReplacement', array()) ;
 		$sql="SELECT * FROM gibbonString ORDER BY priority DESC, original" ;
 		$result = $this->pdo->executeQuery(array(), $sql);
