@@ -31,6 +31,7 @@ v13.0.00
 		...
 
 	Tweaks & Bug Fixes
+		System: fixed sql loading issue in trans class
 		School Admin: fixed timezone issue in managing special days
 		User Admin: fixed PHP Notice issue in user import
 
